--- a/infra/package.json
+++ b/infra/package.json
@@ -3,25 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "tsc -p .",
-    "watch": "tsc -w -p .",
+    "build": "tsc -p tsconfig.json",
+    "watch": "tsc -w",
     "cdk": "cdk",
     "synth": "cdk synth",
-    "deploy": "cdk deploy",
+    "deploy": "cdk deploy --require-approval never",
+    "diff": "cdk diff",
     "destroy": "cdk destroy"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.151.0",
+    "aws-cdk-lib": "^2.152.0",
     "constructs": "^10.3.0",
-    "source-map-support": "^0.5.21",
-    "@aws-cdk/aws-apigatewayv2-alpha": "^2.151.0-alpha.0",
-    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.151.0-alpha.0"
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
     "ts-node": "^10.9.2",
-    "esbuild": "^0.21.5"
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.0"
   }
 }
-
 
