--- a/infra/tsconfig.json
+++ b/infra/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "lib": ["ES2020"],
-    "declaration": true,
+    "lib": ["es2020"],
+    "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -12,5 +12,4 @@
   },
   "include": ["bin", "lib"]
 }
-
 
