--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -11,14 +11,11 @@ jobs:
       id-token: write
       contents: read
     env:
-      # 💡 Make CDK noisy so we see real errors
       CDK_DEBUG: "true"
-      # 💡 Avoid some jsii noise
       JSII_SILENCE_WARNING_UNTESTED_NODE_VERSION: "1"
     steps:
       - uses: actions/checkout@v4
 
-      # 💡 Show what ref/repo the job is running as (aligns with trust policy)
       - name: Debug refs
         run: |
           echo "GITHUB_REPOSITORY=$GITHUB_REPOSITORY"
@@ -37,34 +34,57 @@ jobs:
           role-session-name: gha-infra-${{ github.run_id }}
           aws-region: us-west-2
 
-      # 💡 Confirm we actually assumed the role
       - name: Who am I?
+        id: whoami
         run: aws sts get-caller-identity
 
-      # Root deps (if any)
       - name: Install root deps
         run: npm ci --workspaces=false
 
-      # 💡 Ensure infra has esbuild so bundling doesn't try to use Docker
       - name: Install infra deps (+ ensure esbuild)
         run: |
           cd infra
           npm ci
-          npx esbuild --version || npm i -D esbuild && npx esbuild --version
+          npx esbuild --version || (npm i -D esbuild && npx esbuild --version)
 
-      # 💡 Quick CDK doctor + list
+      # 1) always run doctor/list; keep going even if they fail, and save logs
       - name: CDK doctor & list
+        continue-on-error: true
         run: |
           cd infra
-          npx cdk doctor || true
-          npx cdk list -v
+          {
+            echo "=== cdk doctor ==="
+            npx cdk doctor
+            echo "=== cdk list -v ==="
+            npx cdk list -v
+          } | tee ../cdk_preflight.log
 
+      # 2) ALWAYS bootstrap in CI (it's idempotent) so deploy won't fail for missing toolkit
+      - name: CDK bootstrap (idempotent)
+        run: |
+          cd infra
+          npx cdk bootstrap aws://167053021813/us-west-2 -v | tee ../cdk_bootstrap.log
+
+      # 3) synth with verbose logging
       - name: CDK synth (verbose)
         run: |
           cd infra
-          npx cdk synth -v
+          npx cdk synth -v | tee ../cdk_synth.log
 
+      # 4) deploy with verbose logging
       - name: CDK deploy (verbose)
         run: |
           cd infra
-          npx cdk deploy WebStack ApiStack ObservabilityStack --require-approval never -v
+          npx cdk deploy WebStack ApiStack ObservabilityStack --require-approval never -v | tee ../cdk_deploy.log
+
+      # 5) always upload logs so we can see the real error, even on failure
+      - name: Upload CDK logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cdk-logs
+          path: |
+            cdk_preflight.log
+            cdk_bootstrap.log
+            cdk_synth.log
+            cdk_deploy.log
