--- a/infra/package.json
+++ b/infra/package.json
@@ -17,9 +17,10 @@
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
+    "esbuild": "^0.25.9",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
     "typescript": "^5.4.0"
   }
 }
-
