--- a/infra/package.json
+++ b/infra/package.json
@@ -18,6 +18,7 @@
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
+    "aws-cdk": "^2.152.0",
     "@types/node": "^24.3.0",
     "esbuild": "^0.25.9",
     "ts-node": "^10.9.2",
