--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "next": "15.5.0",
-    "@next/mdx": "15.5.0"
+    "@next/mdx": "15.5.0",
+    "@mdx-js/react": "^3.0.0"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -23,6 +24,7 @@
     "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3",
+    "@mdx-js/loader": "^3.0.0"
   }
 }
