--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,22 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.0",
+    "@mdx-js/react": "^3.0.0",
     "@next/mdx": "15.5.0",
-    "@mdx-js/react": "^3.0.0"
+    "liquid-glass-react": "^1.1.1",
+    "next": "15.5.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@mdx-js/loader": "^3.0.0",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "@eslint/eslintrc": "^3",
-    "@mdx-js/loader": "^3.0.0"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
