--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,7 +17,8 @@
     "liquid-glass-react": "^1.1.1",
     "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "trig-js": "^4.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
