--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint",
     "resume:build": "node ./scripts/build-resume.mjs",
     "resume:watch": "watchexec -w ./src/app/resume/resources -e tex,cls -- node ./scripts/build-resume.mjs",
-    "resume:sync": "node ./scripts/sync-resume-assets.mjs"
+    "resume:sync": "node ./scripts/sync-resume-assets.mjs",
+    "mercury:pdf": "node ./scripts/generate-mercury-pdf.mjs"
   },
   "dependencies": {
     "@mdx-js/react": "^3.0.0",
@@ -31,6 +32,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
+    "puppeteer": "^24.34.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
