--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,12 +9,16 @@
     "lint": "eslint",
     "resume:build": "node ./scripts/build-resume.mjs",
     "resume:watch": "watchexec -w ./src/app/resume/resources -e tex,cls -- node ./scripts/build-resume.mjs",
-    "resume:sync": "node ./scripts/sync-resume-assets.mjs"
+    "resume:sync": "node ./scripts/sync-resume-assets.mjs",
+    "mercury:pdf": "node ./scripts/generate-mercury-pdf.mjs"
   },
   "dependencies": {
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "15.5.0",
+    "@xyflow/react": "^12.10.0",
+    "framer-motion": "^12.23.26",
     "liquid-glass-react": "^1.1.1",
+    "lucide-react": "^0.562.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -28,6 +32,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
+    "playwright": "^1.57.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
